--- a/accordionview/src/main/res/layout/accordion_view.xml
+++ b/accordionview/src/main/res/layout/accordion_view.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout android:orientation="vertical"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <View android:layout_width="match_parent"
+    <View
+        android:id="@+id/top_divider"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/divider_height"
         android:background="@color/divider_color" />
-
 
     <RelativeLayout
         android:id="@+id/title_section"
@@ -27,6 +28,7 @@
             android:layout_height="25dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:src="@drawable/ic_expand_more_black_36dp"
             android:tint="@color/black"/>
 
     </RelativeLayout>
@@ -34,10 +36,17 @@
     <LinearLayout
         android:id="@+id/expandable_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="16dp"
+        android:background="@color/divider_color"
         android:orientation="vertical">
 
     </LinearLayout>
+
+    <View
+        android:id="@+id/bottom_divider"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider_height"
+        android:background="@color/divider_color" />
 
 </LinearLayout>
