--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.brandonhogan.accordionview_master.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+
+    
+    <com.brandonhogan.accordionview.AccordionView
+        android:id="@+id/accordion_one"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        app:titleBackgroundHighlight="@color/colorPrimary"
+        app:titleColorHighlight="@color/colorAccent"/>
+
+    
+    
 </RelativeLayout>
