--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -10,15 +12,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.brandonhogan.accordionview_master.MainActivity">
 
-
     
     <com.brandonhogan.accordionview.AccordionView
         android:id="@+id/accordion_one"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:titleColorHighlight="@color/colorAccent"/>
+
+
+    <com.brandonhogan.accordionview.AccordionView
+        android:id="@+id/accordion_two"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:titleBackgroundHighlight="@color/colorPrimary"
         app:titleColorHighlight="@color/colorAccent"/>
 
-    
-    
-</RelativeLayout>
+
+</LinearLayout>
